src/objects/FinalTest__c.object
<CustomObject>
    <fields>
        <fullName>CheckboxField__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>CheckboxField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrencyField__c</fullName>
        <description>Currency Field Description</description>
        <inlineHelpText>Currency Help Text</inlineHelpText>
        <label>CurrencyField</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateTimeField__c</fullName>
        <description>DateTime Field Description</description>
        <inlineHelpText>DateTime Help Text</inlineHelpText>
        <label>DateTimeField</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailField__c</fullName>
        <description>Email Field Description</description>
        <inlineHelpText>Email Help Text</inlineHelpText>
        <label>EmailField</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LocationField__c</fullName>
        <description>Geolocation Field Description</description>
        <inlineHelpText>Geolocation Help Text</inlineHelpText>
        <label>LocationField</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MultiselectPicklistField__c</fullName>
        <description>Text Multi Picklist Description</description>
        <inlineHelpText>Mutlipicklist Help Text</inlineHelpText>
        <label>MultiselectPicklistField</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>pick1</fullName><default>false</default><label>pick1</label></value>
                <value><fullName>pick2</fullName><default>false</default><label>pick2</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PercentField__c</fullName>
        <description>Percent Field Description</description>
        <inlineHelpText>Percent Help Text</inlineHelpText>
        <label>PercentField</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PicklistField__c</fullName>
        <description>Text Picklist Description</description>
        <inlineHelpText>Picklist Help Text</inlineHelpText>
        <label>PicklistField</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>pick1</fullName><default>false</default><label>pick1</label></value>
                <value><fullName>pick2</fullName><default>false</default><label>pick2</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TextAreaField__c</fullName>
        <description>TextArea Field Description</description>
        <inlineHelpText>TextArea Help Text</inlineHelpText>
        <label>TextAreaField</label>
        <type>TextArea</type>
    </fields>
    <label>FinalTest</label>
    <nameField>
        <label>FinalTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FinalTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>